# cpp-peglib

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  justfile  peg.vim  peglib.h
.github/workflows/: abidiff.yml  cmake.yml
abi/: abi_probe.cc
benchmark/: CMakeLists.txt  README.md  benchmark.cc
benchmark/data/: all-tpch.sql  big.sql  q1.sql  sql-optimized.peg  sql.gram
cmake/: PeglibCXXStandard.cmake  PeglibCompileOptions.cmake  PeglibIncludePaths.cmake  PeglibOptions.cmake  PeglibThreads.cmake
cmake/packaging/: Config.cmake.in
docs/: build.sh  index.html  index.js  native.cpp  native.js  native.wasm  style.css
example/: CMakeLists.txt  Makefile  calc.cc  calc.vcxproj  calc2.cc  calc2.vcxproj  calc3.cc  calc3.vcxproj  calc4.cc  calc5.cc  choice.cc  docx.cc  enter_leave.cc  example.sln  indent.cc  pl0.cc  pl0.vcxproj  sequence.cc  symbol_check.cc
grammar/: cpp-peglib.peg  csv.peg  culebra.peg  json.peg  monkey.peg  monkey_left_recursive.peg  pl0.peg  pl0_left_recursive.peg
harness/: DEBUGGING.md  README.md
harness/cpp/: CMakeLists.txt  harness.cc
harness/rust/: Cargo.toml
harness/rust/src/: handlers.rs  main.rs  semantic.rs
language/: CMakeLists.txt  cul.vim  culebra.h  culebra.sln  culebra.vcxproj  culebra_vc13.vcxproj  interpreter.cc  interpreter.hpp  linenoise.hpp  main.cc  parser.cc  parser.hpp  repl.cc  repl.hpp
language/culebra/: CMakeLists.txt  culebra.h  culebra.vcxproj  main.cc
language/culebra/samples/: closure.cul  test.cul
language/culebra/vc14/: culebra.sln
language/pl0/: CMakeLists.txt  pl0.cc  pl0.sln  pl0.vcxproj
language/pl0/samples/: fib.pas  gcd.pas  square.pas
language/samples/: closure.cul  fib.cul  fizzbuzz.cul  test.cul
language/vc12/: culebra.vcxproj
language/vc14/: culebra.sln  culebra.vcxproj  culebra_vc13.sln
lint/: CMakeLists.txt  Makefile  README.md  httplib.h  mmap.h  peglint.cc  peglint.sln  peglint.vcxproj  server.cc
lint/cmdline/: Makefile  peglint.cc  peglint.vcxproj  server.cc
lint/online/: main.cc  playground.vcxproj
lint/online/www/: index.html
lint/playground/: main.cc  playground.sln  playground.vcxproj
lint/playground/www/: index.html
pl0/: CMakeLists.txt  Makefile  README.md  pl0.cc
rust-peglib/: Cargo.toml  README.md
rust-peglib/orc-jit/: Cargo.toml  README.md  build.rs
rust-peglib/orc-jit/src/: ffi.rs  lib.rs
rust-peglib/pl0/: Cargo.toml
rust-peglib/pl0/src/: interp.rs  jit.rs  main.rs  parser.rs  symbol.rs
rust-peglib/src/: lib.rs  meta.rs  ope.rs
rust-peglib/tests/: bench_sql.rs  test_ast.rs  test_calc.rs  test_mini_js.rs
scripts/: release.sh
spec/: README.md
spec/mini-js/: grammar.peg  tests.json
spec/schema/: test-case.schema.json
spec/tests/ast/: choice_count.json  instructions.json  optimization.json
spec/tests/core/: character_class.json  escapes.json  grammar_rejections.json  grammar_validation.json  ignore.json  lookahead.json  peg_syntax.json  snapshot.json  start_rule.json  token_boundary.json  token_determination.json
spec/tests/error/: error_recovery.json  error_report.json  infinite_loop.json  trailing_and_predicate.json
spec/tests/extensions/: capture_backreference.json  case_insensitive.json  cut.json  dictionary.json  dictionary_precedence.json  first_set.json  left_recursion.json  macro.json  precedence.json  repetition.json  whitespace.json  word_boundary_literal.json
spec/tests/packrat/: packrat.json
spec/tests/semantic/: arithmetic.json  choice_detection.json  enter_leave.json  predicate.json  state_variables.json  token_conversion.json  trace_ordering.json  value_edge.json
spec/tests/unicode/: character_class.json  dot.json  identifiers.json  literals.json
test/: CMakeLists.txt  Makefile  test-main.cc  test.cc  test.sln  test.vcxproj  test1.cc  test2.cc  test3.cc  test_combinators.cc  test_core.cc  test_definition_api.cc  test_error.cc  test_first_set.cc  test_integration.cc  test_left_recursive.cc  test_mini_js.cc  test_packrat.cc  test_peg_syntax.cc  test_rules.cc  test_serialize.cc  test_snapshot.cc  test_token_predicate.cc  test_trace.cc  test_unicode_state.cc  test_utf8.cc
tutorial/: chap_01.md  chap_02.md  intro.md  toc.md
tutorial/code/: repl.cc
